# Textractor

./: .gitignore  CMakeLists.txt  README.md  deploy.ps1  deploy_mecab.ps1  test.cmake  text.cpp
.github/workflows/: build.yaml
.gtihub/workflows/: main.yaml
GUI/: CMakeLists.txt  extenwindow.cpp  mainwindow.cpp
cmake/: QtUtils.cmake
extensions/: CMakeLists.txt  devtoolsdeepltranslate.cpp  extensionimpl.cpp  extrawindow.cpp  network.cpp  translatewrapper.cpp  usemecab.h
host/: textthread.h
include/: qtcommon.h
texthook/: CMakeLists.txt
texthook/engine/: engine.cc  engine.h  match32.cc  match64.cc
